--- a/CrossElementsPosition/CrossElementsPosition.csproj
+++ b/CrossElementsPosition/CrossElementsPosition.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Infrastructure\Base\Command.cs" />
     <Compile Include="Infrastructure\LambdaCommand.cs" />
     <Compile Include="Infrastructure\RevitCommand.cs" />
+    <Compile Include="Models\Filters\FurnitureCategoryFilter.cs" />
     <Compile Include="Models\Filters\GenericModelCategoryFilter.cs" />
     <Compile Include="Models\RevitGeometryUtils.cs" />
     <Compile Include="Models\RevitModelForfard.cs" />
