Add feat select markup elements by settings

--- a/CrossElementsPosition/app.config
+++ b/CrossElementsPosition/app.config
@@ -10,6 +10,9 @@
             <setting name="BlockElementIds" serializeAs="String">
                 <value />
             </setting>
+            <setting name="MarkupElementIds" serializeAs="String">
+                <value />
+            </setting>
         </CrossElementsPosition.Properties.Settings>
     </userSettings>
 </configuration>
