--- a/CrossElementsPosition/Properties/Settings.settings
+++ b/CrossElementsPosition/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="BlockElementIds" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="MarkupElementIds" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
